java/java-tests/testData/codeInsight/daemonCodeAnalyzer/implicitClass/WithPackageStatement.java
<error descr="Package statement is not allowed in compact source files">package pack.bar;</error>

void foo() {

}